Fixed getAllUsers